--- a/bienvenue.html
+++ b/bienvenue.html
@@ -19,13 +19,22 @@
         <h2>Météo</h2>
       </div>
       <div class="weather-widget">
-        <iframe 
-          src="https://forecast7.com/fr/43d70n7d27/nice/?unit=celcius"
-          frameborder="0" 
-          width="100%" 
-          height="200" 
-          style="border-radius:10px;">
-        </iframe>
+        <a class="weatherwidget-io" href="https://forecast7.com/fr/43d57n7d11/juan-les-pins/"
+           data-label_1="JUAN-LES-PINS" 
+           data-label_2="Météo" 
+           data-theme="pure">
+           JUAN-LES-PINS Météo
+        </a>
+        <script>
+          !function(d,s,id){
+            var js,fjs=d.getElementsByTagName(s)[0];
+            if(!d.getElementById(id)){
+              js=d.createElement(s);js.id=id;
+              js.src='https://weatherwidget.io/js/widget.min.js';
+              fjs.parentNode.insertBefore(js,fjs);
+            }
+          }(document,'script','weatherwidget-io-js');
+        </script>
       </div>
     </section>
 
