--- a/activites.html
+++ b/activites.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Activités</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -24,10 +25,21 @@
     </div>
   </main>
 
+  
   <nav class="bottom-nav">
-    <a href="bienvenue.html">Bienvenue</a>
-    <a href="asavoir.html">À savoir</a>
-    <a href="activites.html" class="active">Activités</a>
+    <a href="bienvenue.html" >
+      <i class="fa-solid fa-house"></i>
+      <span>Bienvenue</span>
+    </a>
+    <a href="asavoir.html" >
+      <i class="fa-solid fa-circle-info"></i>
+      <span>À savoir</span>
+    </a>
+    <a href="activites.html" class="active">
+      <i class="fa-solid fa-map-location-dot"></i>
+      <span>Activités</span>
+    </a>
   </nav>
+
 </body>
 </html>
