--- a/activites.html
+++ b/activites.html
@@ -6,6 +6,7 @@
   <title>Activités</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -26,12 +27,13 @@
   </main>
 
   
+  
   <nav class="bottom-nav">
-    <a href="bienvenue.html" >
+    <a href="bienvenue.html">
       <i class="fa-solid fa-house"></i>
       <span>Bienvenue</span>
     </a>
-    <a href="asavoir.html" >
+    <a href="asavoir.html">
       <i class="fa-solid fa-circle-info"></i>
       <span>À savoir</span>
     </a>
@@ -40,6 +42,7 @@
       <span>Activités</span>
     </a>
   </nav>
+
 
 </body>
 </html>
