--- a/asavoir.html
+++ b/asavoir.html
@@ -6,6 +6,7 @@
   <title>À savoir</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -30,8 +31,9 @@
   </main>
 
   
+  
   <nav class="bottom-nav">
-    <a href="bienvenue.html" >
+    <a href="bienvenue.html">
       <i class="fa-solid fa-house"></i>
       <span>Bienvenue</span>
     </a>
@@ -39,11 +41,12 @@
       <i class="fa-solid fa-circle-info"></i>
       <span>À savoir</span>
     </a>
-    <a href="activites.html" >
+    <a href="activites.html">
       <i class="fa-solid fa-map-location-dot"></i>
       <span>Activités</span>
     </a>
   </nav>
+
 
 </body>
 </html>
