--- a/bienvenue.html
+++ b/bienvenue.html
@@ -27,17 +27,6 @@
            JUAN-LES-PINS Météo
         </a>
       </div>
-
-      <script>
-      !function(d,s,id){
-        var js,fjs=d.getElementsByTagName(s)[0];
-        if(!d.getElementById(id)){
-          js=d.createElement(s);js.id=id;
-          js.src='https://weatherwidget.io/js/widget.min.js';
-          fjs.parentNode.insertBefore(js,fjs);
-        }
-      }(document,'script','weatherwidget-io-js');
-      </script>
     </section>
 
     <!-- Section infos utiles -->
@@ -76,6 +65,18 @@
       </div>
     </section>
   </main>
+
+  <!-- Script météo officiel -->
+  <script>
+  !function(d,s,id){
+    var js,fjs=d.getElementsByTagName(s)[0];
+    if(!d.getElementById(id)){
+      js=d.createElement(s);js.id=id;
+      js.src='https://weatherwidget.io/js/widget.min.js';
+      fjs.parentNode.insertBefore(js,fjs);
+    }
+  }(document,'script','weatherwidget-io-js');
+  </script>
 
   <!-- Menu bas -->
   <nav class="bottom-nav">
