--- a/bienvenue.html
+++ b/bienvenue.html
@@ -20,11 +20,11 @@
         <h2>Météo</h2>
       </div>
       <div class="weather-widget">
-        <a class="weatherwidget-io" href="https://forecast7.com/fr/43d57n7d11/juan-les-pins/"
+        <a class="weatherwidget-io" href="https://forecast7.com/fr/43d58n7d12/antibes/"
            data-label_1="JUAN-LES-PINS" 
-           data-label_2="MÉTÉO" 
+           data-label_2="METEO" 
            data-theme="beige">
-           JUAN-LES-PINS Météo
+           JUAN-LES-PINS METEO
         </a>
       </div>
     </section>
