--- a/bienvenue.html
+++ b/bienvenue.html
@@ -19,14 +19,39 @@
       <div class="section-header">
         <h2>Météo</h2>
       </div>
-      <div class="weather-widget">
-        <a class="weatherwidget-io" href="https://forecast7.com/fr/43d58n7d12/antibes/"
-           data-label_1="JUAN-LES-PINS" 
-           data-label_2="METEO" 
-           data-theme="beige">
-           JUAN-LES-PINS METEO
+      <div class="meteo" style="text-align:center; margin-bottom: 1.5em;">
+        <a class="weatherwidget-io"
+           href="https://forecast7.com/fr/43d57n7d11/juan-les-pins/"
+           data-label_1="Juan-les-Pins"
+           data-label_2="Météo"
+           data-theme="beige"
+           data-font="Arial"
+           data-days="3"
+           data-mode="Horizontal"
+           data-icons="Climacons Animated"
+           data-highcolor="#6e814a"
+           data-lowcolor="#6e814a"
+           data-suncolor="#6e814a"
+           data-mooncolor="#6e814a"
+           data-raincolor="#6e814a"
+           data-snowcolor="#6e814a"
+           data-cloudcolor="#6e814a"
+           data-textcolor="#8fa77b"
+           data-basecolor="transparent"
+           style="height:65px;">
+           Météo Juan-les-Pins
         </a>
       </div>
+      <script>
+      !function(d,s,id){
+        var js,fjs=d.getElementsByTagName(s)[0];
+        if(!d.getElementById(id)){
+          js=d.createElement(s);js.id=id;
+          js.src='https://weatherwidget.io/js/widget.min.js';
+          fjs.parentNode.insertBefore(js,fjs);
+        }
+      }(document,'script','weatherwidget-io-js');
+      </script>
     </section>
 
     <!-- Section infos utiles -->
@@ -65,18 +90,6 @@
       </div>
     </section>
   </main>
-
-  <!-- Script météo officiel -->
-  <script>
-  !function(d,s,id){
-    var js,fjs=d.getElementsByTagName(s)[0];
-    if(!d.getElementById(id)){
-      js=d.createElement(s);js.id=id;
-      js.src='https://weatherwidget.io/js/widget.min.js';
-      fjs.parentNode.insertBefore(js,fjs);
-    }
-  }(document,'script','weatherwidget-io-js');
-  </script>
 
   <!-- Menu bas -->
   <nav class="bottom-nav">
