--- a/bienvenue.html
+++ b/bienvenue.html
@@ -21,8 +21,8 @@
       </div>
       <div class="meteo" style="text-align:center; margin-bottom: 1.5em;">
         <a class="weatherwidget-io"
-           href="https://forecast7.com/fr/43d57n7d11/juan-les-pins/"
-           data-label_1="Juan-les-Pins"
+           href="https://forecast7.com/fr/43d717d26/nice/"
+           data-label_1="Nice"
            data-label_2="Météo"
            data-theme="beige"
            data-font="Arial"
@@ -39,7 +39,7 @@
            data-textcolor="#8fa77b"
            data-basecolor="transparent"
            style="height:65px;">
-           Météo Juan-les-Pins
+           Météo Nice
         </a>
       </div>
       <script>
