--- a/bienvenue.html
+++ b/bienvenue.html
@@ -21,9 +21,9 @@
       </div>
       <div class="meteo" style="text-align:center; margin-bottom: 1.5em;">
         <a class="weatherwidget-io"
-           href="https://forecast7.com/fr/43d717d26/nice/"
-           data-label_1="Nice"
-           data-label_2="Météo"
+           href="https://forecast7.com/fr/43d58n7d12/antibes/"
+           data-label_1="JUAN-LES-PINS"
+           data-label_2="MÉTÉO"
            data-theme="beige"
            data-font="Arial"
            data-days="3"
@@ -39,7 +39,7 @@
            data-textcolor="#8fa77b"
            data-basecolor="transparent"
            style="height:65px;">
-           Météo Nice
+           JUAN-LES-PINS MÉTÉO
         </a>
       </div>
       <script>
