--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <button onclick="setLang('fr')">🇫🇷 FR</button>
       <button onclick="setLang('en')">🇬🇧 EN</button>
     </div>
-    <!-- Logo intégré -->
+    <!-- Logo -->
     <img src="logo.png" alt="Anaïs Logo" class="logo">
-    <p class="i18n" 
-       data-fr="Perle de la Côte d’Azur, Juan-les-Pins vous invite à profiter de ses plages dorées, de ses pins et de ses soirées animées." 
-       data-en="A gem of the French Riviera, Juan-les-Pins invites you to enjoy its golden beaches, pine trees, and lively evenings.">
+    <p class="i18n welcome-text"
+       data-fr="Bienvenue à Juan-les-Pins, perle de la Côte d’Azur ! Ici, la mer Méditerranée se mêle à l’effervescence des soirées, aux plages dorées et aux balades entre pins et ruelles charmantes. Vous êtes au cœur d’un lieu vivant, entre douceur provençale et élégance azuréenne. Profitez de la plage, des restaurants, des terrasses animées et de l’ambiance unique qui fait la réputation de Juan-les-Pins." 
+       data-en="Welcome to Juan-les-Pins, jewel of the French Riviera! Here, the Mediterranean Sea blends with vibrant nightlife, golden beaches, and peaceful walks among pine trees and charming alleys. You’re in the heart of a lively place where Provençal warmth meets Riviera elegance. Enjoy the beach, restaurants, lively terraces, and the unique atmosphere that makes Juan-les-Pins so famous.">
     </p>
   </header>
 
