--- a/asavoir.html
+++ b/asavoir.html
@@ -1,1 +1,1 @@
-<!-- placeholder -->
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>asavoir.html</title><link rel='stylesheet' href='style.css'></head><body><h1>asavoir.html</h1></body></html>
