--- a/bienvenue.html
+++ b/bienvenue.html
@@ -29,7 +29,7 @@
       </div>
     </section>
 
-    <!-- Section infos utiles simplifiée -->
+    <!-- Section infos utiles -->
     <section>
       <div class="section-header">
         <h2 class="i18n" data-fr="Informations utiles" data-en="Useful Info"></h2>
@@ -43,6 +43,24 @@
         <div class="card">
           <i class="fa-solid fa-door-open"></i>
           <p class="i18n" data-fr="Votre arrivée" data-en="Your arrival"></p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section activités -->
+    <section>
+      <div class="section-header">
+        <h2 class="i18n" data-fr="Activités" data-en="Activities"></h2>
+        <a href="activites.html" class="btn i18n" data-fr="Voir plus" data-en="See more"></a>
+      </div>
+      <div class="cards">
+        <div class="card">
+          <i class="fa-solid fa-wine-glass"></i>
+          <p class="i18n" data-fr="Bars & Restaurants" data-en="Bars & Restaurants"></p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-person-walking"></i>
+          <p class="i18n" data-fr="Se balader" data-en="Take a walk"></p>
         </div>
       </div>
     </section>
