--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main>
     <!-- Bloc météo -->
-    <section>
+    <section class="weather-section">
       <div id="weatherCard" class="weather-card">
         <p class="i18n" data-fr="Chargement de la météo..." data-en="Loading weather..."></p>
       </div>
