--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
         </div>
       </div>
     </section>
+
+    <!-- Section adresse -->
+    <section>
+      <div class="section-header">
+        <h2 class="i18n" data-fr="Adresse" data-en="Address"></h2>
+      </div>
+      <div class="address-box">
+        <p>xx avenue du Docteur Fabre<br>06160 Juan-les-Pins</p>
+        <a href="https://www.google.com/maps/place/xx+avenue+du+Docteur+Fabre+06160+Juan-les-Pins" target="_blank" 
+           class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a>
+      </div>
+    </section>
   </main>
 
   <!-- Menu bas -->
