--- a/bienvenue.html
+++ b/bienvenue.html
@@ -29,39 +29,33 @@
       </div>
     </section>
 
-    <!-- Section infos utiles -->
+    <!-- Section infos utiles avec carrousel -->
     <section>
       <div class="section-header">
         <h2 class="i18n" data-fr="Informations utiles" data-en="Useful Info"></h2>
         <a href="asavoir.html" class="btn i18n" data-fr="Voir plus" data-en="See more"></a>
       </div>
-      <div class="cards">
-        <div class="card">
-          <i class="fa-solid fa-car"></i>
-          <p class="i18n" data-fr="En route vers l’appartement" data-en="On the way to the apartment"></p>
-        </div>
-        <div class="card">
-          <i class="fa-solid fa-door-open"></i>
-          <p class="i18n" data-fr="Votre arrivée" data-en="Your arrival"></p>
-        </div>
+      <div class="cards scroll-x">
+        <div class="card"><i class="fa-solid fa-car"></i><p class="i18n" data-fr="En route" data-en="On the way"></p></div>
+        <div class="card"><i class="fa-solid fa-door-open"></i><p class="i18n" data-fr="Votre arrivée" data-en="Your arrival"></p></div>
+        <div class="card"><i class="fa-solid fa-wifi"></i><p class="i18n" data-fr="Wi-Fi" data-en="Wi-Fi"></p></div>
+        <div class="card"><i class="fa-solid fa-square-parking"></i><p class="i18n" data-fr="Parking" data-en="Parking"></p></div>
+        <div class="card"><i class="fa-solid fa-key"></i><p class="i18n" data-fr="Code d’entrée" data-en="Entry code"></p></div>
       </div>
     </section>
 
-    <!-- Section activités -->
+    <!-- Section activités avec carrousel -->
     <section>
       <div class="section-header">
         <h2 class="i18n" data-fr="Activités" data-en="Activities"></h2>
         <a href="activites.html" class="btn i18n" data-fr="Voir plus" data-en="See more"></a>
       </div>
-      <div class="cards">
-        <div class="card">
-          <i class="fa-solid fa-wine-glass"></i>
-          <p class="i18n" data-fr="Bars & Restaurants" data-en="Bars & Restaurants"></p>
-        </div>
-        <div class="card">
-          <i class="fa-solid fa-person-walking"></i>
-          <p class="i18n" data-fr="Se balader" data-en="Take a walk"></p>
-        </div>
+      <div class="cards scroll-x">
+        <div class="card"><i class="fa-solid fa-wine-glass"></i><p class="i18n" data-fr="Bars & Restaurants" data-en="Bars & Restaurants"></p></div>
+        <div class="card"><i class="fa-solid fa-person-walking"></i><p class="i18n" data-fr="Se balader" data-en="Walks"></p></div>
+        <div class="card"><i class="fa-solid fa-umbrella-beach"></i><p class="i18n" data-fr="Plages" data-en="Beaches"></p></div>
+        <div class="card"><i class="fa-solid fa-landmark"></i><p class="i18n" data-fr="Culture" data-en="Culture"></p></div>
+        <div class="card"><i class="fa-solid fa-music"></i><p class="i18n" data-fr="Soirées" data-en="Nightlife"></p></div>
       </div>
     </section>
 
