--- a/asavoir.html
+++ b/asavoir.html
@@ -1,76 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>À savoir</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-  <header>
-    <div class="lang-switch">
-      <button onclick="setLang('fr')">🇫🇷 FR</button>
-      <button onclick="setLang('en')">🇬🇧 EN</button>
-    </div>
-    <h1 class="i18n" data-fr="À savoir" data-en="To Know"></h1>
-    <p class="i18n" data-fr="Informations pratiques pour profiter au mieux de votre séjour." data-en="Practical information to make the most of your stay."></p>
-  </header>
-
-  <main>
-    <section>
-      <div class="section-header"><h2 class="i18n" data-fr="Règles de la maison" data-en="House Rules"></h2></div>
-      <div class="cards">
-        <div class="card"><i class="fa-solid fa-smoking-ban"></i><p class="i18n" data-fr="🚭 Appartement non-fumeur" data-en="🚭 Non-smoking apartment"></p></div>
-        <div class="card"><i class="fa-solid fa-volume-low"></i><p class="i18n" data-fr="Respectez le voisinage : pas de bruit après 22h" data-en="Respect neighbors: no noise after 10 PM"></p></div>
-        <div class="card"><i class="fa-solid fa-dog"></i><p class="i18n" data-fr="Les animaux ne sont pas admis" data-en="Pets are not allowed"></p></div>
-      </div>
-    </section>
-
-    <section>
-      <div class="section-header"><h2 class="i18n" data-fr="Équipements" data-en="Amenities"></h2></div>
-      <div class="cards">
-        <div class="card"><i class="fa-solid fa-kitchen-set"></i><p class="i18n" data-fr="Cuisine équipée (four, micro-ondes, lave-vaisselle)" data-en="Fully equipped kitchen (oven, microwave, dishwasher)"></p></div>
-        <div class="card"><i class="fa-solid fa-tv"></i><p class="i18n" data-fr="TV connectée avec Netflix et YouTube" data-en="Smart TV with Netflix and YouTube"></p></div>
-        <div class="card"><i class="fa-solid fa-snowflake"></i><p class="i18n" data-fr="Climatisation réversible" data-en="Air conditioning (hot & cold)"></p></div>
-        <div class="card"><i class="fa-solid fa-washing-machine"></i><p class="i18n" data-fr="Lave-linge et sèche-linge" data-en="Washing machine & dryer"></p></div>
-      </div>
-    </section>
-
-    <section>
-      <div class="section-header"><h2 class="i18n" data-fr="Déchets & Tri" data-en="Waste & Recycling"></h2></div>
-      <div class="cards">
-        <div class="card"><i class="fa-solid fa-recycle"></i><p class="i18n" data-fr="Conteneurs jaunes : emballages & plastiques" data-en="Yellow bins: packaging & plastics"></p></div>
-        <div class="card"><i class="fa-solid fa-trash"></i><p class="i18n" data-fr="Conteneurs gris : ordures ménagères" data-en="Grey bins: household waste"></p></div>
-        <div class="card"><i class="fa-solid fa-apple-alt"></i><p class="i18n" data-fr="Conteneurs verts : verre" data-en="Green bins: glass"></p></div>
-      </div>
-    </section>
-
-    <section>
-      <div class="section-header"><h2 class="i18n" data-fr="Urgences" data-en="Emergencies"></h2></div>
-      <div class="cards">
-        <div class="card"><i class="fa-solid fa-hospital"></i><p class="i18n" data-fr="Hôpital d’Antibes - 04 92 91 91 91" data-en="Antibes Hospital - +33 4 92 91 91 91"></p></div>
-        <div class="card"><i class="fa-solid fa-briefcase-medical"></i><p class="i18n" data-fr="Pharmacie de Juan-les-Pins - 04 93 61 23 45" data-en="Juan-les-Pins Pharmacy - +33 4 93 61 23 45"></p></div>
-        <div class="card"><i class="fa-solid fa-phone"></i><p class="i18n" data-fr="Numéros d’urgence : 15 (SAMU), 18 (Pompiers), 17 (Police)" data-en="Emergency numbers: 15 (Ambulance), 18 (Fire), 17 (Police)"></p></div>
-      </div>
-    </section>
-  </main>
-
-  <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
-  </nav>
-
-  <script>
-  function setLang(lang) {
-    document.querySelectorAll('.i18n').forEach(el => { el.textContent = el.dataset[lang]; });
-    localStorage.setItem("lang", lang);
-  }
-  document.addEventListener("DOMContentLoaded", () => {
-    const savedLang = localStorage.getItem("lang") || "fr";
-    setLang(savedLang);
-  });
-  </script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>asavoir.html</title><link rel='stylesheet' href='style.css'></head><body><h1>asavoir.html</h1></body></html>
