--- a/asavoir.html
+++ b/asavoir.html
@@ -15,18 +15,19 @@
   <main>
     <section>
       <p class="i18n"
-         data-fr="Voici toutes les informations essentielles pour profiter pleinement de votre séjour : accès, connexion Wi-Fi, équipements disponibles, règles de la maison, urgences et gestion des déchets."
-         data-en="Here are all the essential details to fully enjoy your stay: access, Wi-Fi connection, available equipment, house rules, emergencies, and waste management.">
+         data-fr="Voici toutes les informations essentielles pour profiter pleinement de votre séjour : accès, connexion Wi-Fi, équipements disponibles, règles de la maison, urgences, gestion des déchets et transports."
+         data-en="Here are all the essential details to fully enjoy your stay: access, Wi-Fi connection, available equipment, house rules, emergencies, waste management and transport.">
       </p>
     </section>
 
-    <section class="cards vertical">
+    <section class="cards vertical fullwidth">
       <div class="card"><i class="fa-solid fa-door-open"></i><p class="i18n" data-fr="Votre accès" data-en="Your access"></p></div>
       <div class="card"><i class="fa-solid fa-wifi"></i><p class="i18n" data-fr="Wi-Fi" data-en="Wi-Fi"></p></div>
       <div class="card"><i class="fa-solid fa-couch"></i><p class="i18n" data-fr="Équipement" data-en="Equipment"></p></div>
       <div class="card"><i class="fa-solid fa-scroll"></i><p class="i18n" data-fr="Règlement intérieur" data-en="House rules"></p></div>
       <div class="card"><i class="fa-solid fa-triangle-exclamation"></i><p class="i18n" data-fr="Urgence" data-en="Emergency"></p></div>
       <div class="card"><i class="fa-solid fa-recycle"></i><p class="i18n" data-fr="Déchets & Tri" data-en="Waste & Recycling"></p></div>
+      <div class="card"><i class="fa-solid fa-bus"></i><p class="i18n" data-fr="Transport" data-en="Transport"></p></div>
     </section>
   </main>
 
