--- a/bienvenue.html
+++ b/bienvenue.html
@@ -1,130 +1,49 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
+<!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenue</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
   <header>
-    <div class="lang-switch">
-      <button onclick="setLang('fr')">🇫🇷 FR</button>
-      <button onclick="setLang('en')">🇬🇧 EN</button>
-    </div>
-    <!-- Logo -->
-    <img src="logo.png" alt="Anaïs Logo" class="logo">
-    <p class="i18n welcome-text"
-       data-fr="Bienvenue à Juan-les-Pins, perle de la Côte d’Azur ! Ici, la mer Méditerranée se mêle à l’effervescence des soirées, aux plages dorées et aux balades entre pins et ruelles charmantes. Vous êtes au cœur d’un lieu vivant, entre douceur provençale et élégance azuréenne. Profitez de la plage, des restaurants, des terrasses animées et de l’ambiance unique qui fait la réputation de Juan-les-Pins." 
-       data-en="Welcome to Juan-les-Pins, jewel of the French Riviera! Here, the Mediterranean Sea blends with vibrant nightlife, golden beaches, and peaceful walks among pine trees and charming alleys. You’re in the heart of a lively place where Provençal warmth meets Riviera elegance. Enjoy the beach, restaurants, lively terraces, and the unique atmosphere that makes Juan-les-Pins so famous.">
-    </p>
+    <div class="lang-switch"><button onclick="setLang('fr')">🇫🇷 FR</button><button onclick="setLang('en')">🇬🇧 EN</button></div>
+    <img src="logo.png" class="logo">
+    <p class="welcome-text">Bienvenue à Juan-les-Pins, perle de la Côte d'Azur. Profitez de l'appartement et de la région.</p>
   </header>
+  <main class="content">
+    <section class="weather-section"><div id="weatherCard" class="weather-card"><p>Chargement de la météo...</p></div></section>
 
-  <main>
-    <!-- Bloc météo -->
-    <section class="weather-section">
-      <div id="weatherCard" class="weather-card">
-        <p class="i18n" data-fr="Chargement de la météo..." data-en="Loading weather..."></p>
-      </div>
-    </section>
-
-    <!-- Section infos utiles avec carrousel -->
     <section>
-      <div class="section-header">
-        <h2 class="i18n" data-fr="Informations utiles" data-en="Useful Info"></h2>
-        <a href="asavoir.html" class="btn i18n" data-fr="Voir plus" data-en="See more"></a>
-      </div>
+      <div class="section-header"><h2>Informations utiles</h2><a class="btn" href="asavoir.html">Voir plus</a></div>
       <div class="cards scroll-x">
-        <div class="card"><i class="fa-solid fa-car"></i><p class="i18n" data-fr="En route" data-en="On the way"></p></div>
-        <div class="card"><i class="fa-solid fa-door-open"></i><p class="i18n" data-fr="Votre arrivée" data-en="Your arrival"></p></div>
-        <div class="card"><i class="fa-solid fa-wifi"></i><p class="i18n" data-fr="Wi-Fi" data-en="Wi-Fi"></p></div>
-        <div class="card"><i class="fa-solid fa-square-parking"></i><p class="i18n" data-fr="Parking" data-en="Parking"></p></div>
-        <div class="card"><i class="fa-solid fa-key"></i><p class="i18n" data-fr="Code d’entrée" data-en="Entry code"></p></div>
+        <a class="card" href="acces.html"><i class="fa-solid fa-door-open"></i><p>Votre accès</p></a>
+        <a class="card" href="wifi.html"><i class="fa-solid fa-wifi"></i><p>Wi‑Fi</p></a>
+        <a class="card" href="parking.html"><i class="fa-solid fa-square-parking"></i><p>Parking</p></a>
+        <a class="card" href="code.html"><i class="fa-solid fa-key"></i><p>Code d’entrée</p></a>
       </div>
     </section>
 
-    <!-- Section activités avec carrousel -->
     <section>
-      <div class="section-header">
-        <h2 class="i18n" data-fr="Activités" data-en="Activities"></h2>
-        <a href="activites.html" class="btn i18n" data-fr="Voir plus" data-en="See more"></a>
-      </div>
+      <div class="section-header"><h2>Activités</h2><a class="btn" href="activites.html">Voir plus</a></div>
       <div class="cards scroll-x">
-        <div class="card"><i class="fa-solid fa-wine-glass"></i><p class="i18n" data-fr="Bars & Restaurants" data-en="Bars & Restaurants"></p></div>
-        <div class="card"><i class="fa-solid fa-person-walking"></i><p class="i18n" data-fr="Se balader" data-en="Walks"></p></div>
-        <div class="card"><i class="fa-solid fa-umbrella-beach"></i><p class="i18n" data-fr="Plages" data-en="Beaches"></p></div>
-        <div class="card"><i class="fa-solid fa-landmark"></i><p class="i18n" data-fr="Culture" data-en="Culture"></p></div>
-        <div class="card"><i class="fa-solid fa-music"></i><p class="i18n" data-fr="Soirées" data-en="Nightlife"></p></div>
-      </div>
-    </section>
-
-    <!-- Section adresse -->
-    <section>
-      <div class="section-header">
-        <h2 class="i18n" data-fr="Adresse" data-en="Address"></h2>
-      </div>
-      <div class="address-box">
-        <p>xx avenue du Docteur Fabre<br>06160 Juan-les-Pins</p>
-        <a href="https://www.google.com/maps/place/xx+avenue+du+Docteur+Fabre+06160+Juan-les-Pins" target="_blank" 
-           class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a>
+        <a class="card" href="restaurants.html"><i class="fa-solid fa-utensils"></i><p>Restaurants & Bars</p></a>
+        <a class="card" href="plages.html"><i class="fa-solid fa-umbrella-beach"></i><p>Plages & Loisirs</p></a>
+        <a class="card" href="decouvrir.html"><i class="fa-solid fa-map-location-dot"></i><p>À découvrir</p></a>
       </div>
     </section>
   </main>
-
-  <!-- Menu bas -->
+  
   <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span>Bienvenue</span></a>
+    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span>À savoir</span></a>
+    <a href="activites.html" class="active"><i class="fa-solid fa-map-location-dot"></i><span>Activités</span></a>
   </nav>
 
-  <!-- Scripts -->
   <script>
-  function setLang(lang) {
-    document.querySelectorAll('.i18n').forEach(el => {
-      el.textContent = el.dataset[lang];
-    });
-    localStorage.setItem("lang", lang);
-  }
-  document.addEventListener("DOMContentLoaded", () => {
-    const savedLang = localStorage.getItem("lang") || "fr";
-    setLang(savedLang);
-  });
-
-  // météo
-  const lat = 43.567, lon = 7.112;
-  fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&daily=temperature_2m_max,temperature_2m_min,weathercode&timezone=auto`)
-    .then(r=>r.json())
-    .then(data => {
-      const current = data.current_weather, daily = data.daily;
-      let html = `<div class="weather-now">
-        <span class="weather-icon">${getIcon(current.weathercode)}</span>
-        <div><h3>${current.temperature}°C</h3><p>Vent ${current.windspeed} km/h</p></div>
-      </div><div class="weather-forecast">`;
-      for(let i=0;i<3;i++){
-        const d = new Date(daily.time[i]);
-        const day = d.toLocaleDateString('fr-FR',{weekday:'short'});
-        html += `<div class="forecast-day">
-          <span>${day}</span>
-          <span class="weather-icon">${getIcon(daily.weathercode[i])}</span>
-          <span>${daily.temperature_2m_min[i]}° / ${daily.temperature_2m_max[i]}°</span>
-        </div>`;
-      }
-      html += "</div>";
-      document.getElementById("weatherCard").innerHTML = html;
-    });
-  function getIcon(c){
-    if([0].includes(c)) return "☀️";
-    if([1,2].includes(c)) return "🌤️";
-    if([3].includes(c)) return "☁️";
-    if([45,48].includes(c)) return "🌫️";
-    if([51,61,80].includes(c)) return "🌦️";
-    if([63,65,81,82].includes(c)) return "🌧️";
-    if([71,73,75,85,86].includes(c)) return "❄️";
-    if([95,96,99].includes(c)) return "⛈️";
-    return "❔";
-  }
+  function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{if(el.dataset && el.dataset[lang]) el.textContent = el.dataset[lang];});localStorage.setItem('lang',lang);}
+  document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
+  const lat=43.567, lon=7.112;
+  fetch('https://api.open-meteo.com/v1/forecast?latitude='+lat+'&longitude='+lon+'&current_weather=true&daily=temperature_2m_max,temperature_2m_min,weathercode&timezone=auto').then(r=>r.json()).then(d=>{const c=d.current_weather,y=d.daily;let h='<div class="weather-now"><span class="weather-icon">☀️</span><div><h3>'+c.temperature+'°C</h3><p class="small-meta">Vent '+c.windspeed+' km/h</p></div></div><div class="weather-forecast">';for(let i=0;i<3;i++){const dt=new Date(y.time[i]).toLocaleDateString('fr-FR',{weekday:'short'});h+='<div class="forecast-day"><span>'+dt+'</span><span class="weather-icon">☀️</span><span>'+y.temperature_2m_min[i]+'° / '+y.temperature_2m_max[i]+'°</span></div>';}h+='</div>';document.getElementById('weatherCard').innerHTML=h}).catch(()=>{document.getElementById('weatherCard').innerHTML='<p>—</p>'});
   </script>
-</body>
-</html>
+</body></html>
