--- a/bienvenue.html
+++ b/bienvenue.html
@@ -3,47 +3,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
+</head><body>
+<header>
+<div class="lang-switch"><button onclick="setLang('fr')">🇫🇷 FR</button><button onclick="setLang('en')">🇬🇧 EN</button></div>
+<img src="logo.png" class="logo">
+<p class="i18n welcome-text" data-fr="Bienvenue à Juan-les-Pins, perle de la Côte d’Azur !" data-en="Welcome to Juan-les-Pins, jewel of the French Riviera!"></p>
+</header>
+<main class="content">
+<section class="weather-section"><div id="weatherCard" class="weather-card"><p class="i18n" data-fr="Chargement météo..." data-en="Loading weather..."></p></div></section>
+<section><div class="section-header"><h2 class="i18n" data-fr="Informations utiles" data-en="Useful info"></h2></div>
+<div class="cards scroll-x">
+<a class="card" href="acces.html"><i class="fa-solid fa-door-open"></i><p class="i18n" data-fr="Votre accès" data-en="Your access"></p></a>
+<a class="card" href="wifi.html"><i class="fa-solid fa-wifi"></i><p>Wi‑Fi</p></a>
+<a class="card" href="parking.html"><i class="fa-solid fa-square-parking"></i><p>Parking</p></a>
+<a class="card" href="code.html"><i class="fa-solid fa-key"></i><p class="i18n" data-fr="Code d’entrée" data-en="Entry code"></p></a>
+</div></section>
+<section><div class="section-header"><h2 class="i18n" data-fr="Activités" data-en="Activities"></h2></div>
+<div class="cards scroll-x">
+<a class="card" href="restaurants.html"><i class="fa-solid fa-utensils"></i><p class="i18n" data-fr="Restaurants & Bars" data-en="Restaurants & Bars"></p></a>
+<a class="card" href="plages.html"><i class="fa-solid fa-umbrella-beach"></i><p class="i18n" data-fr="Plages & Loisirs" data-en="Beaches & Leisure"></p></a>
+<a class="card" href="decouvrir.html"><i class="fa-solid fa-map-location-dot"></i><p class="i18n" data-fr="À découvrir" data-en="To discover"></p></a>
+</div></section>
+<section><div class="section-header"><h2 class="i18n" data-fr="Adresse" data-en="Address"></h2></div>
+<div class="address-box"><p class="i18n" data-fr="xx avenue du Docteur Fabre<br>06160 Juan-les-Pins" data-en="xx avenue du Docteur Fabre<br>06160 Juan-les-Pins"></p>
+<a href="https://www.google.com/maps/place/xx+avenue+du+Docteur+Fabre+06160+Juan-les-Pins" target="_blank" class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a></div>
+</section>
+</main>
 
-<body>
-  <header>
-    <div class="lang-switch"><button onclick="setLang('fr')">🇫🇷 FR</button><button onclick="setLang('en')">🇬🇧 EN</button></div>
-    <img src="logo.png" class="logo">
-    <p class="welcome-text">Bienvenue à Juan-les-Pins, perle de la Côte d'Azur. Profitez de l'appartement et de la région.</p>
-  </header>
-  <main class="content">
-    <section class="weather-section"><div id="weatherCard" class="weather-card"><p>Chargement de la météo...</p></div></section>
-
-    <section>
-      <div class="section-header"><h2>Informations utiles</h2><a class="btn" href="asavoir.html">Voir plus</a></div>
-      <div class="cards scroll-x">
-        <a class="card" href="acces.html"><i class="fa-solid fa-door-open"></i><p>Votre accès</p></a>
-        <a class="card" href="wifi.html"><i class="fa-solid fa-wifi"></i><p>Wi‑Fi</p></a>
-        <a class="card" href="parking.html"><i class="fa-solid fa-square-parking"></i><p>Parking</p></a>
-        <a class="card" href="code.html"><i class="fa-solid fa-key"></i><p>Code d’entrée</p></a>
-      </div>
-    </section>
-
-    <section>
-      <div class="section-header"><h2>Activités</h2><a class="btn" href="activites.html">Voir plus</a></div>
-      <div class="cards scroll-x">
-        <a class="card" href="restaurants.html"><i class="fa-solid fa-utensils"></i><p>Restaurants & Bars</p></a>
-        <a class="card" href="plages.html"><i class="fa-solid fa-umbrella-beach"></i><p>Plages & Loisirs</p></a>
-        <a class="card" href="decouvrir.html"><i class="fa-solid fa-map-location-dot"></i><p>À découvrir</p></a>
-      </div>
-    </section>
-  </main>
-  
   <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span>Bienvenue</span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span>À savoir</span></a>
-    <a href="activites.html" class="active"><i class="fa-solid fa-map-location-dot"></i><span>Activités</span></a>
+    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
+    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
+    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
   </nav>
 
-  <script>
-  function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{if(el.dataset && el.dataset[lang]) el.textContent = el.dataset[lang];});localStorage.setItem('lang',lang);}
-  document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
-  const lat=43.567, lon=7.112;
-  fetch('https://api.open-meteo.com/v1/forecast?latitude='+lat+'&longitude='+lon+'&current_weather=true&daily=temperature_2m_max,temperature_2m_min,weathercode&timezone=auto').then(r=>r.json()).then(d=>{const c=d.current_weather,y=d.daily;let h='<div class="weather-now"><span class="weather-icon">☀️</span><div><h3>'+c.temperature+'°C</h3><p class="small-meta">Vent '+c.windspeed+' km/h</p></div></div><div class="weather-forecast">';for(let i=0;i<3;i++){const dt=new Date(y.time[i]).toLocaleDateString('fr-FR',{weekday:'short'});h+='<div class="forecast-day"><span>'+dt+'</span><span class="weather-icon">☀️</span><span>'+y.temperature_2m_min[i]+'° / '+y.temperature_2m_max[i]+'°</span></div>';}h+='</div>';document.getElementById('weatherCard').innerHTML=h}).catch(()=>{document.getElementById('weatherCard').innerHTML='<p>—</p>'});
-  </script>
-</body></html>
+<script>
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
+</script></body></html>
