--- a/code.html
+++ b/code.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html><html lang='fr'><head>
+<!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body><header><h1>Code d’entrée</h1></header><main class='content'><h2>Code d'entrée</h2><p>Le code est temporairement : <strong>1234</strong>. Remplace ce code par le code officiel fourni avant l'arrivée.</p><hr><div class='small-meta'>English</div><h2>Entry code</h2><p>The temporary code is: <strong>1234</strong>. Replace with the official code provided before arrival.</p></main>
+</head><body>
+<header><h1 class="i18n" data-fr="Code d’entrée" data-en="Entry code"></h1></header>
+<main class="content">
+  <p class="i18n" data-fr="Code temporaire : 1234" data-en="Temporary code: 1234"></p>
+</main>
+
   <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span>Bienvenue</span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span>À savoir</span></a>
-    <a href="activites.html" class="active"><i class="fa-solid fa-map-location-dot"></i><span>Activités</span></a>
+    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
+    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
+    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
   </nav>
-<script>function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{if(el.dataset && el.dataset[lang]) el.textContent = el.dataset[lang];});localStorage.setItem('lang',lang);}document.addEventListener('DOMContentLoaded',()=>setLang(localStorage.getItem('lang')||'fr'));</script></body></html>
+
+<script>
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
+</script>
+</body></html>
